# voice_input

./: .gitignore  BUILD_STATUS.md  CLAUDE.md  README.md
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
android/app/src/main/java/com/voiceboard/android/: AudioRecorder.kt  IMESettingsActivity.kt  MainActivity.kt  VoiceBoardIME.kt  WaveformView.kt  WhisperManager.kt
android/app/src/main/java/com/voiceboard/android/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/drawable/: ic_backspace.xml  ic_keyboard_hide.xml  ic_keyboard_return.xml  ic_mic_normal.xml  ic_mic_recording.xml  ic_settings.xml  ic_space.xml  ic_wifi_off.xml  mic_button_background.xml  offline_indicator_bg.xml  utility_button_background.xml
android/app/src/main/res/layout/: keyboard_view.xml
android/app/src/main/res/values/: colors.xml  strings.xml
android/app/src/main/res/xml/: method.xml
ios/VoiceBoard/: AudioEngine.swift  ContentView.swift  Info.plist  VoiceBoard.entitlements  VoiceBoardApp.swift  WhisperManager.swift
ios/VoiceBoard.xcodeproj/: project.pbxproj
ios/VoiceBoardKeyboard/: Info.plist  KeyboardViewController.swift  VoiceBoardKeyboard.entitlements
models/: manifest.json
scripts/: build_models.py  setup_whisper.sh
shared/: types.h
whisper-engine/: whisper_engine.cpp  whisper_engine.h
